--- a/console/client/src/assets/scss/base/_grid.scss
+++ b/console/client/src/assets/scss/base/_grid.scss
@@ -1,35 +1,102 @@
 .row {
-  display: flex;
-  flex-direction: row;
-  &.dark {
-    background-color: $color-light-tint-1;
-  }
-  .col {
     position: relative;
-    width: 100%;
-    &-1 {
-      width: 10%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    
+    width:100%;
+    &.center {
+        justify-content: center;
     }
-    &-2 {
-      width: 16.6666%;
+    &.dark {
+        background-color: $color-light-tint-1;
     }
-    &-3 {
-      width: 25%;
+    .col {
+        //position: relative;
+        //width: 100%;
+       // margin-right: 1em;
+       flex: 1;
+       &.center {
+           text-align: center;
+        }
+        &.right {
+            text-align: right;
+            margin-right: 1em;
+        }
+        &-1 {
+            width: 10%;
+        }
+        &-2 {
+            width: 16.6666%;
+        }
+        &-3 {
+            flex: 0.25;
+        }
+        &-4 {
+            flex: 0.333;
+           // width: 33.3333%;
+        }
+        &-5 {
+            flex: 0.41;
+        }
+        &-6 {
+            flex: 0.5;
+        }
+        &-7 {
+            width: 58.3333%;
+        }
+        &-8 {
+            width: 66.6666%;
+        }
+        &-9 {
+            width: 75%;
+        }
+        &-10 {
+            width: 83.3333%;
+        }
+        &-11 {
+            width: 91.6666%;
+        }
+        &-12 {
+            width: 100%;
+        }
+        @media screen and (max-width: 1080px) {  
+            &-1 {
+                width: 10%;
+            }
+            &-2 {
+                width: 16.6666%;
+            }
+            &-3 {
+                width: 25%;
+            }
+            &-4 {
+                width: 33.3333%;
+            }
+            &-5 {
+                width: 41.6666%;
+            }
+            &-6 {
+                width: 100%;
+            }
+            &-7 {
+                width: 58.3333%;
+            }
+            &-8 {
+                width: 66.6666%;
+            }
+            &-9 {
+                width: 75%;
+            }
+            &-10 {
+                width: 83.3333%;
+            }
+            &-11 {
+                width: 91.6666%;
+            }
+            &-12 {
+                width: 100%;
+            }
+        }
     }
-    &-4 {
-      width: 33.3333%;
-    }
-    &-5 {
-      width: 41.6666%;
-    }
-    &-6 {
-      width: 50%;
-    }
-    &-7 {
-      width: 58.3333%;
-    }
-    &-8 {
-      width: 66.6666%;
-    }
-  }
 }
