--- a/console/client/src/assets/scss/base/_card.scss
+++ b/console/client/src/assets/scss/base/_card.scss
@@ -46,7 +46,7 @@
         font-size: 14pt;
         font-weight: bold;
         padding-top: 0;
-        margin-bottom: 10px;
+        //margin-bottom: 10px;
         //        border-bottom: 1px solid $color-accent-tint-1;
 
         &.small {
